# LaserRoboSurgery

./: DEV_TRACKER.md  README.md  laserGUI.py  trajectory_generation.py
End Effector Assembly_April_2018/: ATI-DEFAULT.SLDPRT  Assem1.SLDASM  End-Effector Assembly.pptx  FiberOpticConnector.SLDPRT  ST Bulkhead ConnectorSLDPRT.SLDPRT
End Effector Assembly_April_2018/ATI-9120 Tool_A/: ATI-9120-005T-E10-000.SLDASM  ATI-9120-005T-E10-000_E10T-005.SLDPRT  ATI-9120-005T-E10-000_QC5-T.SLDPRT
End Effector Assembly_April_2018/ATI-9120M_A/: ATI-9120-005M-E10-000-4259.SLDASM  ATI-9120-005M-E10-000-4259_1220.SLDPRT  ATI-9120-005M-E10-000-4259_4259.SLDPRT  ATI-9120-005M-E10-000-4259_E10M-005.SLDPRT  ATI-9120-005M-E10-000-4259_QC5-M.SLDPRT
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/trajectory_tracking/: TrajectoryPoint.h  TrajectoryPointRequest.h  TrajectoryPointResponse.h
devel/lib/inv_kinematics/: inv_kinematics
devel/lib/irb120/: irb120_node
devel/lib/irb120_tf_calc/: irb120_tf_calc_node
devel/lib/pkgconfig/: KineUtils.pc  inv_kinematics.pc  irb120.pc  irb120_control.pc  irb120_description.pc  irb120_gazebo.pc  (+3 more)
src/KineUtils/: CMakeLists.txt
src/inv_kinematics/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/inv_kinematics/config/: default.yaml
src/inv_kinematics/include/inv_kinematics/: AnalyticalIK.hpp  InvKinematics.hpp
src/inv_kinematics/launch/: inv_kinematics.launch
src/inv_kinematics/src/: .RosPackageTemplate.cpp.swp  .ros_package_template_node.cpp.swp  AnalyticalIK.cpp  InvKinematics.cpp  inv_kinematics_node.cpp
(+59 files in other folders)
