<?xml version="1.0"?>
<package format="2">
  <name>inv_kinematics</name>
  <version>0.1.0</version>
  <description>Inverse kinematics solution of the ABB IRB120 Robot.</description>
  <maintainer email="hraghuvanshi@wpi.edu">Himanshu Raghuvanshi</maintainer>
  <license>BSD</license>
  <author email="hraghuvanshi@wpi.edu">Himanshu Raghuvanshi</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>eigen</depend>
  <!--<depend>boost</depend>-->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
